[MIG] hr_workweek_reports: migration to 16

--- a/hr_workweek_reports/i18n/es.po
+++ b/hr_workweek_reports/i18n/es.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-12 06:10+0000\n"
-"PO-Revision-Date: 2023-06-12 06:10+0000\n"
+"POT-Creation-Date: 2024-02-05 13:18+0000\n"
+"PO-Revision-Date: 2024-02-05 13:18+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -35,11 +35,10 @@ msgid ""
 "                            border: border: 1px solid #ddd;padding: 8px;\n"
 "                        }\n"
 "                    </style>\n"
-"                    <t t-set=\"employee\" t-value=\"ctx.get('employee', employee)\"/>\n"
-"                    <t t-set=\"calendars\" t-value=\"ctx.get('calendars', allowed_calendars)\"/>\n"
+"                    <t t-set=\"calendars\" t-value=\"ctx.get('calendars')\"></t>\n"
 "                    <t t-foreach=\"calendars\" t-as=\"calendar\">\n"
 "                        <h2 style=\"                                 padding-top: 12px;                                 padding-bottom: 12px;                                 text-align: left;                                 background-color: white;                                 color: #8595bf;\">\n"
-"                                <t t-out=\"calendar.name\"/>\n"
+"                                <t t-out=\"calendar.name\"></t>\n"
 "                        </h2>\n"
 "                        <table style=\"                             font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;                             border-collapse: collapse;                             width: 100%;\">\n"
 "                            <thead style=\"                                 padding-top: 12px;                                 padding-bottom: 12px;                                 text-align: left;                                 background-color: #8595bf;                                 color: white;\">\n"
@@ -51,19 +50,19 @@ msgid ""
 "                                </tr>\n"
 "                            </thead>\n"
 "                            <tbody>\n"
-"                                <t t-foreach=\"employee.search([('resource_calendar_id', '=', calendar.id)])\" t-as=\"employee\">\n"
+"                                <t t-foreach=\"request.env['hr.employee'].sudo().search([('resource_calendar_id', '=', calendar.id)])\" t-as=\"employee\">\n"
 "                                    <tr style=\"text-align: left;\">\n"
 "                                        <td>\n"
-"                                            <t t-out=\"employee.name\"/>\n"
+"                                            <span t-field=\"employee.name\"></span>\n"
 "                                        </td>\n"
 "                                        <td>\n"
-"                                            <t t-out=\"employee.current_workweek.hours_worked\"/>\n"
+"                                            <span t-field=\"employee.current_workweek.hours_worked\"></span>\n"
 "                                        </td>\n"
-"                                        <td t-name=\"hours_difference_workweek\" t-att-style=\"'background-color: %s' % ('#ef9a9a' if employee.current_workweek.hours_difference &gt; 0 else                                                                                     '#93c2e5' if employee.current_workweek.hours_difference &lt; 0 else '#69f0ae')\">\n"
-"                                            <t t-out=\"employee.current_workweek.hours_difference\"/>\n"
+"                                        <td t-att-style=\"'background-color: %s' % ('#ef9a9a' if employee.current_workweek.hours_difference &gt; 0 else                                                                                     '#93c2e5' if employee.current_workweek.hours_difference &lt; 0 else '#69f0ae')\">\n"
+"                                            <span t-field=\"employee.current_workweek.hours_difference\"></span>\n"
 "                                        </td>\n"
-"                                        <td t-name=\"hours_difference_total\" t-att-style=\"'background-color: %s' % ('#ef9a9a' if employee.hours_difference &gt; 0 else                                                                                     '#93c2e5' if employee.hours_difference &lt; 0 else '#69f0ae')\">\n"
-"                                            <t t-out=\"employee.hours_difference\"/>\n"
+"                                        <td t-att-style=\"'background-color: %s' % ('#ef9a9a' if employee.hours_difference &gt; 0 else                                                                                     '#93c2e5' if employee.hours_difference &lt; 0 else '#69f0ae')\">\n"
+"                                            <span t-field=\"employee.hours_difference\"></span>\n"
 "                                        </td>\n"
 "                                    </tr>\n"
 "                                </t>\n"
@@ -110,11 +109,10 @@ msgstr ""
 "                            border: border: 1px solid #ddd;padding: 8px;\n"
 "                        }\n"
 "                    </style>\n"
-"                    <t t-set=\"employee\" t-value=\"ctx.get('employee', employee)\"/>\n"
-"                    <t t-set=\"calendars\" t-value=\"ctx.get('calendars', allowed_calendars)\"/>\n"
+"                    <t t-set=\"calendars\" t-value=\"ctx.get('calendars')\"></t>\n"
 "                    <t t-foreach=\"calendars\" t-as=\"calendar\">\n"
 "                        <h2 style=\"                                 padding-top: 12px;                                 padding-bottom: 12px;                                 text-align: left;                                 background-color: white;                                 color: #8595bf;\">\n"
-"                                <t t-out=\"calendar.name\"/>\n"
+"                                <t t-out=\"calendar.name\"></t>\n"
 "                        </h2>\n"
 "                        <table style=\"                             font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;                             border-collapse: collapse;                             width: 100%;\">\n"
 "                            <thead style=\"                                 padding-top: 12px;                                 padding-bottom: 12px;                                 text-align: left;                                 background-color: #8595bf;                                 color: white;\">\n"
@@ -126,19 +124,19 @@ msgstr ""
 "                                </tr>\n"
 "                            </thead>\n"
 "                            <tbody>\n"
-"                                <t t-foreach=\"employee.search([('resource_calendar_id', '=', calendar.id)])\" t-as=\"employee\">\n"
+"                                <t t-foreach=\"request.env['hr.employee'].sudo().search([('resource_calendar_id', '=', calendar.id)])\" t-as=\"employee\">\n"
 "                                    <tr style=\"text-align: left;\">\n"
 "                                        <td>\n"
-"                                            <t t-out=\"employee.name\"/>\n"
+"                                            <span t-field=\"employee.name\"></span>\n"
 "                                        </td>\n"
 "                                        <td>\n"
-"                                            <t t-out=\"employee.current_workweek.hours_worked\"/>\n"
+"                                            <span t-field=\"employee.current_workweek.hours_worked\"></span>\n"
 "                                        </td>\n"
-"                                        <td t-name=\"hours_difference_workweek\" t-att-style=\"'background-color: %s' % ('#ef9a9a' if employee.current_workweek.hours_difference &gt; 0 else                                                                                     '#93c2e5' if employee.current_workweek.hours_difference &lt; 0 else '#69f0ae')\">\n"
-"                                            <t t-out=\"employee.current_workweek.hours_difference\"/>\n"
+"                                        <td t-att-style=\"'background-color: %s' % ('#ef9a9a' if employee.current_workweek.hours_difference &gt; 0 else                                                                                     '#93c2e5' if employee.current_workweek.hours_difference &lt; 0 else '#69f0ae')\">\n"
+"                                            <span t-field=\"employee.current_workweek.hours_difference\"></span>\n"
 "                                        </td>\n"
-"                                        <td t-name=\"hours_difference_total\" t-att-style=\"'background-color: %s' % ('#ef9a9a' if employee.hours_difference &gt; 0 else                                                                                     '#93c2e5' if employee.hours_difference &lt; 0 else '#69f0ae')\">\n"
-"                                            <t t-out=\"employee.hours_difference\"/>\n"
+"                                        <td t-att-style=\"'background-color: %s' % ('#ef9a9a' if employee.hours_difference &gt; 0 else                                                                                     '#93c2e5' if employee.hours_difference &lt; 0 else '#69f0ae')\">\n"
+"                                            <span t-field=\"employee.hours_difference\"></span>\n"
 "                                        </td>\n"
 "                                    </tr>\n"
 "                                </t>\n"
@@ -146,7 +144,7 @@ msgstr ""
 "                        </table>\n"
 "                    </t>\n"
 "                    <h3 style=\"                             padding-top: 12px;                             padding-bottom: 12px;                             text-align: left;                             background-color: white;                             color: #8595bf;\">\n"
-"                            Legend\n"
+"                            Leyenda\n"
 "                    </h3>\n"
 "                    <table style=\"                             font-family: 'Trebuchet MS',                             Arial,                             Helvetica,                             sans-serif;                             border-collapse: collapse;                             width: 100%;\">\n"
 "                        <tbody>\n"
@@ -224,6 +222,18 @@ msgid "Employee"
 msgstr "Empleado"
 
 #. module: hr_workweek_reports
+#: model:ir.actions.server,name:hr_workweek_reports.ir_cron_employee_notification_ir_actions_server
+#: model:ir.cron,cron_name:hr_workweek_reports.ir_cron_employee_notification
+msgid "Employee weekly notification"
+msgstr "Notificación semanal empleado"
+
+#. module: hr_workweek_reports
+#: model:ir.actions.server,name:hr_workweek_reports.ir_cron_employees_summary_notification_ir_actions_server
+#: model:ir.cron,cron_name:hr_workweek_reports.ir_cron_employees_summary_notification
+msgid "Employees weekly summary notification"
+msgstr "Notificación resumen semanal empleados"
+
+#. module: hr_workweek_reports
 #: model:mail.template,name:hr_workweek_reports.hours_worked_email_template
 msgid "Weekly report of worked hours"
 msgstr "Informe semanal de las horas trabajadas"
@@ -233,17 +243,3 @@ msgstr "Informe semanal de las horas trabajadas"
 #: model:mail.template,subject:hr_workweek_reports.hours_worked_summary_email_template
 msgid "Weekly summary report of worked hours"
 msgstr "Informe semanal de todas las horas trabajadas"
-
-#. module: hr_workweek_reports
-#: model:ir.actions.server,name:hr_workweek.ir_cron_employee_notification_ir_actions_server
-#: model:ir.cron,cron_name:hr_workweek.ir_cron_employee_notification
-#: model:ir.cron,name:hr_workweek.ir_cron_employee_notification
-msgid "Employee weekly notification"
-msgstr "Notificación semanal del empleado"
-
-#. module: hr_workweek_reports
-#: model:ir.actions.server,name:hr_workweek.ir_cron_employees_summary_notification_ir_actions_server
-#: model:ir.cron,cron_name:hr_workweek.ir_cron_employees_summary_notification
-#: model:ir.cron,name:hr_workweek.ir_cron_employees_summary_notification
-msgid "Employees weekly summary notification"
-msgstr "Notificación resumen semanal de todos los empleados"
