Envio de correo y traducciones

--- a/hr_workweek_reports/i18n/es.po
+++ b/hr_workweek_reports/i18n/es.po
@@ -4,27 +4,16 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0\n"
+"Project-Id-Version: Odoo Server 16.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-05 13:18+0000\n"
-"PO-Revision-Date: 2024-02-05 13:18+0000\n"
+"POT-Creation-Date: 2024-12-16 09:15+0000\n"
+"PO-Revision-Date: 2024-12-16 09:15+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
-
-#. module: hr_workweek_reports
-#: model:mail.template,subject:hr_workweek_reports.hours_worked_email_template
-msgid ""
-"\n"
-"                {{object.name}}'s weekly report of worked hours: {{object.current_workweek.date_start}} -> {{object.current_workweek.date_end}}\n"
-"            "
-msgstr ""
-"\n"
-"                Informe semanal de las horas trabajadas de {{object.name}}: {{object.current_workweek.date_start}} -> {{object.current_workweek.date_end}}\n"
-"            "
 
 #. module: hr_workweek_reports
 #: model:mail.template,body_html:hr_workweek_reports.hours_worked_summary_email_template
@@ -50,7 +39,7 @@ msgid ""
 "                                </tr>\n"
 "                            </thead>\n"
 "                            <tbody>\n"
-"                                <t t-foreach=\"request.env['hr.employee'].sudo().search([('resource_calendar_id', '=', calendar.id)])\" t-as=\"employee\">\n"
+"                                <t t-foreach=\"ctx.get('employees_by_calendar').get(calendar.id, [])\" t-as=\"employee\">\n"
 "                                    <tr style=\"text-align: left;\">\n"
 "                                        <td>\n"
 "                                            <span t-field=\"employee.name\"></span>\n"
@@ -124,7 +113,7 @@ msgstr ""
 "                                </tr>\n"
 "                            </thead>\n"
 "                            <tbody>\n"
-"                                <t t-foreach=\"request.env['hr.employee'].sudo().search([('resource_calendar_id', '=', calendar.id)])\" t-as=\"employee\">\n"
+"                                <t t-foreach=\"ctx.get('employees_by_calendar').get(calendar.id, [])\" t-as=\"employee\">\n"
 "                                    <tr style=\"text-align: left;\">\n"
 "                                        <td>\n"
 "                                            <span t-field=\"employee.name\"></span>\n"
@@ -180,41 +169,63 @@ msgstr ""
 #. module: hr_workweek_reports
 #: model:mail.template,body_html:hr_workweek_reports.hours_worked_email_template
 msgid ""
-"<p>Hello <t t-out=\"object.name\"/>,</p>\n"
-"                <p>This week, from <t t-out=\"object.current_workweek.date_start\"/> to <t t-out=\"object.current_workweek.date_end\"/>,\n"
-"                    you have worked <t t-out=\"object.current_workweek.hours_worked\"/> hours of\n"
-"                    <t t-out=\"object.current_workweek.hours_to_work\"/></p>\n"
+"<t t-set=\"hours_difference\" t-value=\"ctx.get('hours_difference', hours_difference)\"></t>\n"
+"            <t t-set=\"hours_difference_str\" t-value=\"ctx.get('hours_difference_str', hours_difference_str)\"></t>\n"
+"            <t t-set=\"current_workweek_hours_to_work\" t-value=\"ctx.get('current_workweek_hours_to_work', current_workweek_hours_to_work)\"></t>\n"
+"            <t t-set=\"current_workweek_hours_to_work_str\" t-value=\"ctx.get('current_workweek_hours_to_work_str', current_workweek_hours_to_work_str)\"></t>\n"
+"            <t t-set=\"current_workweek_hours_worked_str\" t-value=\"ctx.get('current_workweek_hours_worked_str', current_workweek_hours_worked_str)\"></t>\n"
+"            <p>Hello <t t-out=\"object.name\"></t>,</p>\n"
 "\n"
-"                <p>Taking into account your past workweeks,\n"
-"                    <t t-if=\"object.hours_difference &gt; 0\">\n"
-"                        <span style=\"background-color: #ef9a9a\"> you still have to work <t t-out=\"abs(object.hours_difference)\"/> hours.</span>\n"
-"                    </t>\n"
-"                    <t t-elif=\"object.hours_difference &lt; 0\">\n"
-"                        <span style=\"background-color: #93c2e5\"> you have <t t-out=\"abs(object.hours_difference)\"/> hours of overtime work.</span>\n"
-"                    </t>\n"
-"                    <t t-else=\"\">\n"
-"                        <span style=\"background-color: #69f0ae\"> the difference between your worked and to work hours is <t t-out=\"abs(object.hours_difference)\"/>.</span>\n"
-"                    </t>\n"
-"                </p>\n"
-"            "
+"            <p>This week, from <t t-out=\"object.current_workweek.date_start\"></t> to <t t-out=\"object.current_workweek.date_end\"></t>,\n"
+"                you have worked <t t-out=\"current_workweek_hours_worked_str\"></t> hours of\n"
+"                <t t-out=\"current_workweek_hours_to_work_str\"></t></p>\n"
+"\n"
+"            <p>Taking into account your past workweeks,\n"
+"                <t t-if=\"hours_difference &gt; 0\">\n"
+"                    <span style=\"background-color: #ef9a9a\"> you still have to work <t t-out=\"hours_difference_str\"></t> hours.</span>\n"
+"                </t>\n"
+"                <t t-elif=\"hours_difference &lt; 0\">\n"
+"                    <span style=\"background-color: #93c2e5\"> you have <t t-out=\"hours_difference_str\"></t> hours of overtime work.</span>\n"
+"                </t>\n"
+"                <t t-else=\"\">\n"
+"                    <span style=\"background-color: #69f0ae\"> the difference between your worked and to work hours is <t t-out=\"hours_difference_str\"></t>.</span>\n"
+"                </t>\n"
+"            </p>\n"
+"            <p>\n"
+"                <t t-if=\"object.imputable_daily_fail &gt; 0\">\n"
+"                    <span style=\"background-color: #ef9a9a\"> You have not imputed <t t-out=\"object.imputable_daily_fail\"></t> day(s) this week.</span>\n"
+"                </t>\n"
+"            </p>\n"
+"        "
 msgstr ""
-"<p>Hola <t t-out=\"object.name\"/>,</p>\n"
-"                <p>Esta semana, del <t t-out=\"object.current_workweek.date_start\"/> al <t t-out=\"object.current_workweek.date_end\"/>,\n"
-"                    has trabajado <t t-out=\"object.current_workweek.hours_worked\"/> de\n"
-"                    <t t-out=\"object.current_workweek.hours_to_work\"/></p> horas.\n"
+"<t t-set=\"hours_difference\" t-value=\"ctx.get('hours_difference', hours_difference)\"></t>\n"
+"            <t t-set=\"hours_difference_str\" t-value=\"ctx.get('hours_difference_str', hours_difference_str)\"></t>\n"
+"            <t t-set=\"current_workweek_hours_to_work\" t-value=\"ctx.get('current_workweek_hours_to_work', current_workweek_hours_to_work)\"></t>\n"
+"            <t t-set=\"current_workweek_hours_to_work_str\" t-value=\"ctx.get('current_workweek_hours_to_work_str', current_workweek_hours_to_work_str)\"></t>\n"
+"            <t t-set=\"current_workweek_hours_worked_str\" t-value=\"ctx.get('current_workweek_hours_worked_str', current_workweek_hours_worked_str)\"></t>\n"
+"            <p>Hola <t t-out=\"object.name\"></t>,</p>\n"
 "\n"
-"                <p>Teniendo en cuenta tus anteriores semanas de trabajo,\n"
-"                    <t t-if=\"object.hours_difference &gt; 0\">\n"
-"                        <span style=\"background-color: #ef9a9a\"> todavía tienes que recuperar <t t-out=\"abs(object.hours_difference)\"/> horas.</span>\n"
-"                    </t>\n"
-"                    <t t-elif=\"object.hours_difference &lt; 0\">\n"
-"                        <span style=\"background-color: #93c2e5\"> has hecho <t t-out=\"abs(object.hours_difference)\"/> horas extra.</span>\n"
-"                    </t>\n"
-"                    <t t-else=\"\">\n"
-"                        <span style=\"background-color: #69f0ae\"> la diferencia entre tus horas trabajadas y a trabajar es de <t t-out=\"abs(object.hours_difference)\"/> horas.</span>\n"
-"                    </t>\n"
-"                </p>\n"
-"            "
+"            <p>Esta semana, desde el <t t-out=\"object.current_workweek.date_start\"></t> hasta el <t t-out=\"object.current_workweek.date_end\"></t>,\n"
+"                has trabajado <t t-out=\"current_workweek_hours_worked_str\"></t> horas de\n"
+"                <t t-out=\"current_workweek_hours_to_work_str\"></t></p>\n"
+"\n"
+"            <p>Teniendo en cuenta tus semanas anteriores,\n"
+"                <t t-if=\"hours_difference &gt; 0\">\n"
+"                    <span style=\"background-color: #ef9a9a\"> aún tienes que trabajar <t t-out=\"hours_difference_str\"></t> horas.</span>\n"
+"                </t>\n"
+"                <t t-elif=\"hours_difference &lt; 0\">\n"
+"                    <span style=\"background-color: #93c2e5\"> tienes <t t-out=\"hours_difference_str\"></t> horas de trabajo extra.</span>\n"
+"                </t>\n"
+"                <t t-else=\"\">\n"
+"                    <span style=\"background-color: #69f0ae\"> la diferencia entre las horas trabajadas y las horas que deberías trabajar es <t t-out=\"hours_difference_str\"></t>.</span>\n"
+"                </t>\n"
+"            </p>\n"
+"            <p>\n"
+"                <t t-if=\"object.imputable_daily_fail &gt; 0\">\n"
+"                    <span style=\"background-color: #ef9a9a\"> No has imputado <t t-out=\"object.imputable_daily_fail\"></t> dia(s) esta semana.</span>\n"
+"                </t>\n"
+"            </p>\n"
+"        "
 
 #. module: hr_workweek_reports
 #: model:ir.model,name:hr_workweek_reports.model_hr_employee
@@ -243,3 +254,14 @@ msgstr "Informe semanal de las horas trabajadas"
 #: model:mail.template,subject:hr_workweek_reports.hours_worked_summary_email_template
 msgid "Weekly summary report of worked hours"
 msgstr "Informe semanal de todas las horas trabajadas"
+
+#. module: hr_workweek_reports
+#: model:mail.template,subject:hr_workweek_reports.hours_worked_email_template
+msgid ""
+"{{object.name}}'s weekly report of worked hours: "
+"{{object.current_workweek.date_start}} → "
+"{{object.current_workweek.date_end}}"
+msgstr ""
+"Informe semanal de las horas trabajadas de {{object.name}}: "
+"{{object.current_workweek.date_start}} -> "
+"{{object.current_workweek.date_end}}"
