--- a/hr_workweek_reports/i18n/es.po
+++ b/hr_workweek_reports/i18n/es.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-12-16 09:15+0000\n"
-"PO-Revision-Date: 2024-12-16 09:15+0000\n"
+"POT-Creation-Date: 2024-12-20 11:37+0000\n"
+"PO-Revision-Date: 2024-12-20 11:37+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -169,63 +169,41 @@ msgstr ""
 #. module: hr_workweek_reports
 #: model:mail.template,body_html:hr_workweek_reports.hours_worked_email_template
 msgid ""
-"<t t-set=\"hours_difference\" t-value=\"ctx.get('hours_difference', hours_difference)\"></t>\n"
-"            <t t-set=\"hours_difference_str\" t-value=\"ctx.get('hours_difference_str', hours_difference_str)\"></t>\n"
-"            <t t-set=\"current_workweek_hours_to_work\" t-value=\"ctx.get('current_workweek_hours_to_work', current_workweek_hours_to_work)\"></t>\n"
-"            <t t-set=\"current_workweek_hours_to_work_str\" t-value=\"ctx.get('current_workweek_hours_to_work_str', current_workweek_hours_to_work_str)\"></t>\n"
-"            <t t-set=\"current_workweek_hours_worked_str\" t-value=\"ctx.get('current_workweek_hours_worked_str', current_workweek_hours_worked_str)\"></t>\n"
-"            <p>Hello <t t-out=\"object.name\"></t>,</p>\n"
+"<p>Hello <t t-out=\"object.name\"></t>,</p>\n"
+"                <p>This week, from <t t-out=\"object.current_workweek.date_start\"></t> to <t t-out=\"object.current_workweek.date_end\"></t>,\n"
+"                    you have worked <t t-out=\"object.current_workweek.hours_worked\"></t> hours of\n"
+"                    <t t-out=\"object.current_workweek.hours_to_work\"></t></p>\n"
 "\n"
-"            <p>This week, from <t t-out=\"object.current_workweek.date_start\"></t> to <t t-out=\"object.current_workweek.date_end\"></t>,\n"
-"                you have worked <t t-out=\"current_workweek_hours_worked_str\"></t> hours of\n"
-"                <t t-out=\"current_workweek_hours_to_work_str\"></t></p>\n"
-"\n"
-"            <p>Taking into account your past workweeks,\n"
-"                <t t-if=\"hours_difference &gt; 0\">\n"
-"                    <span style=\"background-color: #ef9a9a\"> you still have to work <t t-out=\"hours_difference_str\"></t> hours.</span>\n"
-"                </t>\n"
-"                <t t-elif=\"hours_difference &lt; 0\">\n"
-"                    <span style=\"background-color: #93c2e5\"> you have <t t-out=\"hours_difference_str\"></t> hours of overtime work.</span>\n"
-"                </t>\n"
-"                <t t-else=\"\">\n"
-"                    <span style=\"background-color: #69f0ae\"> the difference between your worked and to work hours is <t t-out=\"hours_difference_str\"></t>.</span>\n"
-"                </t>\n"
-"            </p>\n"
-"            <p>\n"
-"                <t t-if=\"object.imputable_daily_fail &gt; 0\">\n"
-"                    <span style=\"background-color: #ef9a9a\"> You have not imputed <t t-out=\"object.imputable_daily_fail\"></t> day(s) this week.</span>\n"
-"                </t>\n"
-"            </p>\n"
-"        "
+"                <p>Taking into account your past workweeks,\n"
+"                    <t t-if=\"object.hours_difference &gt; 0\">\n"
+"                        <span style=\"background-color: #ef9a9a\"> you still have to work <t t-out=\"abs(object.hours_difference)\"></t> hours.</span>\n"
+"                    </t>\n"
+"                    <t t-elif=\"object.hours_difference &lt; 0\">\n"
+"                        <span style=\"background-color: #93c2e5\"> you have <t t-out=\"abs(object.hours_difference)\"></t> hours of overtime work.</span>\n"
+"                    </t>\n"
+"                    <t t-else=\"\">\n"
+"                        <span style=\"background-color: #69f0ae\"> the difference between your worked and to work hours is <t t-out=\"abs(object.hours_difference)\"></t>.</span>\n"
+"                    </t>\n"
+"                </p>\n"
+"            "
 msgstr ""
-"<t t-set=\"hours_difference\" t-value=\"ctx.get('hours_difference', hours_difference)\"></t>\n"
-"            <t t-set=\"hours_difference_str\" t-value=\"ctx.get('hours_difference_str', hours_difference_str)\"></t>\n"
-"            <t t-set=\"current_workweek_hours_to_work\" t-value=\"ctx.get('current_workweek_hours_to_work', current_workweek_hours_to_work)\"></t>\n"
-"            <t t-set=\"current_workweek_hours_to_work_str\" t-value=\"ctx.get('current_workweek_hours_to_work_str', current_workweek_hours_to_work_str)\"></t>\n"
-"            <t t-set=\"current_workweek_hours_worked_str\" t-value=\"ctx.get('current_workweek_hours_worked_str', current_workweek_hours_worked_str)\"></t>\n"
-"            <p>Hola <t t-out=\"object.name\"></t>,</p>\n"
+"<p>Hola <t t-out=\"object.name\"></t>,</p>\n"
+"                <p>Esta semana, desde <t t-out=\"object.current_workweek.date_start\"></t> hasta <t t-out=\"object.current_workweek.date_end\"></t>,\n"
+"                    has trabajado <t t-out=\"object.current_workweek.hours_worked\"></t> horas de\n"
+"                    <t t-out=\"object.current_workweek.hours_to_work\"></t></p>\n"
 "\n"
-"            <p>Esta semana, desde el <t t-out=\"object.current_workweek.date_start\"></t> hasta el <t t-out=\"object.current_workweek.date_end\"></t>,\n"
-"                has trabajado <t t-out=\"current_workweek_hours_worked_str\"></t> horas de\n"
-"                <t t-out=\"current_workweek_hours_to_work_str\"></t></p>\n"
-"\n"
-"            <p>Teniendo en cuenta tus semanas anteriores,\n"
-"                <t t-if=\"hours_difference &gt; 0\">\n"
-"                    <span style=\"background-color: #ef9a9a\"> aún tienes que trabajar <t t-out=\"hours_difference_str\"></t> horas.</span>\n"
-"                </t>\n"
-"                <t t-elif=\"hours_difference &lt; 0\">\n"
-"                    <span style=\"background-color: #93c2e5\"> tienes <t t-out=\"hours_difference_str\"></t> horas de trabajo extra.</span>\n"
-"                </t>\n"
-"                <t t-else=\"\">\n"
-"                    <span style=\"background-color: #69f0ae\"> la diferencia entre las horas trabajadas y las horas que deberías trabajar es <t t-out=\"hours_difference_str\"></t>.</span>\n"
-"                </t>\n"
-"            </p>\n"
-"            <p>\n"
-"                <t t-if=\"object.imputable_daily_fail &gt; 0\">\n"
-"                    <span style=\"background-color: #ef9a9a\"> No has imputado <t t-out=\"object.imputable_daily_fail\"></t> dia(s) esta semana.</span>\n"
-"                </t>\n"
-"            </p>\n"
-"        "
+"                <p>Teniendo en cuenta tus pasadas semanas,\n"
+"                    <t t-if=\"object.hours_difference &gt; 0\">\n"
+"                        <span style=\"background-color: #ef9a9a\"> todavía tienes que trabajar <t t-out=\"abs(object.hours_difference)\"></t> horas.</span>\n"
+"                    </t>\n"
+"                    <t t-elif=\"object.hours_difference &lt; 0\">\n"
+"                        <span style=\"background-color: #93c2e5\"> tienes <t t-out=\"abs(object.hours_difference)\"></t> horas extra.</span>\n"
+"                    </t>\n"
+"                    <t t-else=\"\">\n"
+"                        <span style=\"background-color: #69f0ae\"> la diferencia entre tus horas trabajadas y a trabajar es de <t t-out=\"abs(object.hours_difference)\"></t>.</span>\n"
+"                    </t>\n"
+"                </p>\n"
+"            "
 
 #. module: hr_workweek_reports
 #: model:ir.model,name:hr_workweek_reports.model_hr_employee
